--- a/CheckmarxCLI.gitlab-ci.yml
+++ b/CheckmarxCLI.gitlab-ci.yml
@@ -27,7 +27,7 @@ checkmarx-scan:
       --project-name '${PROJECT_NAME}'
       --file-source '.'
       --format 'json'
-      --branch '${BRANCH_NAME} 
+      --branch '${BRANCH_NAME}'
       --agent 'Gitlab' 
       --file-filter '${FILE_FILTERS}'
       $(echo ${ADDITIONAL_PARAMS} | tr -d '"');
