--- a/CheckmarxCLI.gitlab-ci.yml
+++ b/CheckmarxCLI.gitlab-ci.yml
@@ -24,10 +24,10 @@ checkmarx-scan:
     - >-
       /app/bin/cx
       scan create
-      --project-name '${PROJECT_NAME}'
+      --project-name ${PROJECT_NAME}
       --file-source '.'
       --format 'json'
-      --branch '${BRANCH_NAME}'
+      --branch ${BRANCH_NAME}
       --agent 'Gitlab' 
-      --file-filter '${FILE_FILTERS}'
+      --file-filter ${FILE_FILTERS}
       $(echo ${ADDITIONAL_PARAMS} | tr -d '"');
