--- a/CheckmarxCLI.gitlab-ci.yml
+++ b/CheckmarxCLI.gitlab-ci.yml
@@ -22,7 +22,7 @@ checkmarx-scan:
     entrypoint: ['']
   script:
     - eval "args=(${ADDITIONAL_PARAMS})"
-    - echo "$args[@]"
+    - echo "${args[@]}"
     - >-
       /app/bin/cx
       scan create
@@ -30,4 +30,4 @@ checkmarx-scan:
       --file-source '.'
       --branch ${BRANCH_NAME}
       --agent 'Gitlab' 
-      "$args[@]"
+      "${args[@]}"
